Crash in texture paint mode ! #64965

Closed
opened 2019-05-22 01:18:16 +02:00 by Alexander · 3 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Radeon HD 6670 ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0

Blender Version
Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: e787700393
Worked: (optional)

Short description of error
[Crash in the mode of drawing textures, when you select the checkbox mask]

Exact steps for others to reproduce the error
[Create any base mesh, go to texture paint mode, create a Base color in texture slot, Select brash, in brash setings select checkbox (Mask), select any texture and blender will crash.]
[Based on the default startup file!]

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: AMD Radeon HD 6670 ATI Technologies Inc. 4.5.13417 Core Profile Context 15.301.1901.0 **Blender Version** Broken: version: 2.80 (sub 71), branch: blender2.7, commit date: 2019-05-20 22:03, hash: `e787700393` Worked: (optional) **Short description of error** [Crash in the mode of drawing textures, when you select the checkbox mask] **Exact steps for others to reproduce the error** [Create any base mesh, go to texture paint mode, create a Base color in texture slot, Select brash, in brash setings select checkbox (Mask), select any texture and blender will crash.] [Based on the default startup file!]
Author

Added subscriber: @LDsanya

Added subscriber: @LDsanya

This issue was referenced by 2e350b4034

This issue was referenced by 2e350b40342f71ecf4173c0e9264f233bdcc4c59

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64965
No description provided.