Fix T64965: crash using masks in texture paint mode